<resources>
    <string name="app_name">TEPL PEAK</string>
    <string name="title_activity_exam">ExamActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="image_button_content_description">Change state of section</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Connectiontimeout">Please check internet</string>
    <string name="storage_name">examination</string>
    <string name="practice_test">Practise Test</string>
    <string name="activity_label">Example</string>
    <string name="mock_test">Mock Test</string>
    <string name="monthly_test">Monthly Ranking Test</string>
    <string name="context_test">Contest Test</string>
    <string name="e_books">E-Books</string>
    <string name="predicators">Predicators</string>
    <string name="chat_bot">Support</string>
    <string name="profile">Profile</string>
    <string name="colleges">Colleges</string>
    <string name="qna">QnA</string>
    <string name="subscription">Subscription</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="welcome">Welcome</string>
    <string name="attempt">Attempt</string>
    <string name="retry">Retry</string>
    <string name="resume">Resume</string>
    <string name="submit_exam">Submit Exam</string>
    <string name="previous">Previous</string>
    <string name="quit">Quit</string>
    <string name="question">Questions</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="attempted">Attempted</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="get_contact">Get Contact</string>
    <string name="compare">"Compare   "</string>
    <string name="engineering_colleges">Engineering Colleges</string>
    <string name="video">Video</string>
    <string name="view_more">View More</string>
    <string name="view">View</string>
    <string name="read">Read</string>
    <string name="follow">Follow</string>
    <string name="answer">Answer</string>
    <string name="upvote">Upvote</string>
    <string name="comment">Commemt</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="more_details">More Details</string>
    <string name="add">Add</string>
    <string name="pay">Pay</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="cancel">Cancel</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="newuser_signup">New User? Sign Up</string>
    <string name="resend_code">Resend Code</string>
    <string name="edit_mobilenumber">Edit Number</string>
    <string name="stream">Stream</string>
    <string name="message_tendigitnumber">Enter a 10 digit number!!</string>
    <string name="message_entermobilenumber">Please enter the mobile number!!</string>
    <string name="message_invalidotp">Invalid otp!!</string>
    <string name="message_enterotp">Please enter the otp!!</string>
    <string name="message_entervalidnumber">Enter a registered mobile number or register as a new user!!</string>
    <string name="message_otpsenttonumber">We have sent an OTP to the registered mobile number</string>
    <string name="message_pleaseverify">. Please Verify the same</string>
    <string name="verify">Verify</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_referralmobilenumber">Referral Mobile Number (Optional)</string>
    <string name="standard_academicyear">Standard (in Academic Year)</string>
    <string name="confirmation">Confirmation</string>
    <string name="dialog_wewillverifymobilenumber">We will verify the mobile number:</string>
    <string name="dialog_canweverifythenumber">Is this OK, or would you like to edit the number?</string>
    <string name="dialog_edit">EDIT</string>
    <string name="message_user_exists_login">User exists. Please Login!!</string>
    <string name="message_selectcollegetocompare">Please select more than one college for comparision!!</string>
    <string name="package_title">Package</string>
    <string name="course_name">Crash Course</string>
    <string name="courses">Courses:</string>
    <string name="established">Estd:</string>
    <string name="review">reviews</string>
    <string name="subject_name">Subject Name :</string>
    <string name="sample_paper_name">Name :</string>
    <string name="dialog_details">Details :</string>
    <string name="title_collegecompare">Comparision Of Colleges</string>
    <string name="remove">Remove</string>
    <string name="compare_collegename">College Name</string>
    <string name="compare_numberofcourses">No. of Courses</string>
    <string name="compare_institutename">Institute Name</string>
    <string name="compare_examname">Exam Name</string>
    <string name="compare_ratings">Ratings</string>
    <string name="compare_review">Reviews</string>
    <string name="covered">covered</string>
    <string name="check_progress">Check Progress</string>
    <string name="view_marksheet">View Marksheet</string>
    <string name="view_answersheet">View Answersheet</string>
    <string name="get_exam">Get Exam</string>
    <string name="mail">Mail</string>
    <string name="sync_with_cloud">Sync with cloud</string>
    <string name="skip">Skip</string>
    <string name="change_language">Change Language</string>
    <string name="dialog_submittesttoknowyourscore">Do you want to submit the test to know your scores?</string>
    <string name="start">Start</string>
    <string name="terms_conditions">I have read and understood the instructions given above</string>
    <string name="skip_question">View Answer</string>
    <string name="enlarge_image">Zoom</string>
    <string name="submit_question">Submit Question</string>
    <string name="review_contentexam">Review</string>
    <string name="first">First</string>
    <string name="next">Next</string>
    <string name="last">Last</string>
    <string name="dialog_testsubmitexit">Test will be submitted. Do you still want to exit?</string>
    <string name="remove_review">Remove Review</string>
    <string name="message_questionreview_stillsubmit">You have mention some questions as review question,still do you want to submit exam?</string>
    <string name="message_questionsubmit_noreview">After submitting examination will be closed.Do you want to submit this exam?</string>
    <string name="message_notattemptedsinglequestion">You haven\'t attempted a single question, do you still want to submit?</string>
    <string name="total_time">Total Time</string>
    <string name="time_spent">Time Spent</string>
    <string name="time_left">Time Left</string>
    <string name="total_question">Total Question</string>
    <string name="total_marks">Total Marks</string>
    <string name="negative_marks">Negative Marks</string>
    <string name="questions_attempted">Q. Attempted</string>
    <string name="questions_notattempted">Q. Not Attempted</string>
    <string name="reviews_marked">Q. Review Marked</string>
    <string name="total_attemptedquestions">Total Attempted Questions:</string>
    <string name="total_notattemptedquestions">Total Not Attempted Questions:</string>
    <string name="total_reviewquestions">Total Review Question:</string>
    <string name="thank_you">Thank You</string>
    <string name="expandable_obtained_marks">Obtained Marks</string>
    <string name="expandable_negative_marks">Negative Marks</string>
    <string name="expandable_total_questions">Total Question</string>
    <string name="expandable_attemptedquestions">Attempted Questions</string>
    <string name="expandable_notattemptedquestions">Not Attempted Questions</string>
    <string name="expandable_rightanswers">Right Answers</string>
    <string name="expandable_wronganswers">Wrong Answers</string>
    <string name="loading">Loading..</string>
    <string name="dialog_please_wait">Please wait</string>
    <string name="exam_minutes">Mins</string>
    <string name="exam_marks">Marks</string>
    <string name="exam_to">To</string>
    <string name="report_timetaken">Time taken</string>
    <string name="skipped">Skipped</string>
    <string name="report_stats">Your Stats</string>
    <string name="report_accuracy">ACCURACY</string>
    <string name="report_speed">SPEED</string>
    <string name="choose_language">Choose a language / एक भाषा निवडा</string>
    <string name="toast_selectlanguage">Please select a language to proceed!!</string>
    <string name="next_in_eng_and_mar">Next / पुढे</string>
    <string name="reward_points">Reward Points</string>
    <string name="redeem_coupons">Redeem Coupons</string>
    <string name="refer_earn">Refer and Earn</string>
    <string name="gift_cards">Gift Cards</string>
    <string name="student_id">Student id</string>
    <string name="first_name">First Name</string>
    <string name="father_name">Father\'s Name</string>
    <string name="surname">Surname</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Sex</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="ip">IP</string>
    <string name="alt_mobile_number">Alternate Mobile Number</string>
    <string name="email">Email</string>
    <string name="school_college">School / College</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="update">Update</string>
    <string name="username">User Name</string>
    <string name="expandable_final_marks">Final Marks</string>
    <string name="not_answered">Not answered</string>
    <string name="correct_answer">Your answer is correct</string>
    <string name="wrong_answer">Your answer is wrong</string>
    <string name="qna_answers">answers</string>
    <string name="qna_followers">followers</string>
    <string name="center">Center</string>
    <string name="tab_new">New</string>
    <string name="tab_missed">Missed</string>
    <string name="tab_attempted">Attempted</string>
    <string name="toolbar_hey">Hey</string>
    <string name="toolbar_text">Hope you are doing well. Welcome to the series.</string>
    <string name="timetaken_perquestion">Time Taken :</string>
    <string name="sub_stream">Sub-Stream</string>
    <string name="buy" translatable="false">Buy</string>
    <string name="result_analysis">Result Analysis</string>
    <string name="time_analysis">Time Analysis</string>
    <string name="nonewtestsmessgae">No New Test available currently. Will update you soon. Keep checking</string>
    <string name="nomissedtestsmessage">Yippee!! You have No Missed Test</string>
    <string name="noattemptedtestsmessage">No Attempted Tests at the Moment</string>
    <string name="news">Ebook Video</string>
    <string name="announcements">Ebook</string>
    <string name="suggestions">Suggestion</string>
    <string name="explanation">Explanation</string>
    <string name="support">Support</string>
    <string name="tellusabouttheissue">Tell us about the issue</string>
    <string name="pick_reason">Pick a reason</string>
    <string name="report_error_question_unclear">Question Unclear</string>
    <string name="report_error_wrong_answer">Wrong Answer</string>
    <string name="report_error_wrong_question">Wrong Question</string>
    <string name="report_error_unclear_image">Unclear Image</string>
    <string name="addcomment">Add a Comment</string>
</resources>