<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_2"
    android:orientation="vertical">
    <include layout="@layout/toolbar" />

    <!--<ScrollView
        android:id="@+id/linear_layout_address_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_2"
        android:orientation="vertical"
        android:padding="10dp">-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/lightgray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightgray"
            android:orientation="vertical"
            android:padding="15dp">

            <com.targeteducare.Classes.CircularImageView
                android:id="@+id/profileimage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@mipmap/default_profile" />


            <TextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/username"
                android:textAlignment="center" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinputlayout_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edittext_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinputlayout_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edittext_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surname"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinputlayout_fathersname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edittext_fathersname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/father_name"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinputlayout_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edittext_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/date_of_birth"
                    android:inputType="date"
                    android:maxLength="10" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinputlayout_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/gender"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/radiogroup_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/genderfemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/blue_light"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/gendermale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/blue_light"
                    android:text="@string/male" />
            </RadioGroup>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textinputlayout_mob1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edittext_mobileno1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_number"
                        android:inputType="number"
                        android:maxLength="10" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textinputlayout_mob2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edittext_mobileno2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/alt_mobile_number"
                        android:inputType="number"
                        android:maxLength="10" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinputlayout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edittext_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/stream"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <Spinner
                android:id="@+id/spinner_stream"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"></Spinner>

            <View
                android:id="@+id/viewforstream"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="2dp"
                android:background="@color/Gray" />

            <TextView
                android:id="@+id/tv_standard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sub_stream"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <Spinner
                android:id="@+id/spinner_standard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"></Spinner>

            <View
                android:id="@+id/viewforstandard"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="2dp"
                android:background="@color/Gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/state"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <Spinner
                android:id="@+id/spinner_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"></Spinner>

            <View
                android:id="@+id/vstate"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="2dp"
                android:background="@color/Gray" />

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/city"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <Spinner
                android:id="@+id/spinner_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"></Spinner>

            <View
                android:id="@+id/vcity"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="2dp"
                android:background="@color/Gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/school_college"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <Spinner
                android:id="@+id/spinner_college"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"></Spinner>

            <View
                android:id="@+id/viewforcollege"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="2dp"
                android:background="@color/Gray" />

            <TextView
                android:id="@+id/tv_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <Spinner
                android:id="@+id/spinner_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"></Spinner>

            <View
                android:id="@+id/viewforcenter"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="2dp"
                android:background="@color/Gray" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinputlayout_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edittext_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/district"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/lightgray">

        <Button
            android:id="@+id/button_updateprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/buttoncolor"
            android:text="@string/update"
            android:textColor="@color/White" />

    </RelativeLayout>

</LinearLayout>