<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="4dip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:measureWithLargestChild="true"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/textview_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@color/White"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="Review Later"
            android:paddingLeft="10dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/textcolor">

        </TextView>

        <TextView
            android:id="@+id/textview_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:background="@color/White"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/first"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/red"
            android:visibility="gone"
            >

        </TextView>

        <TextView
            android:id="@+id/textview_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/White"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/submit"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/BlueLight"
            android:visibility="gone"
            >

        </TextView>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="1dp"
        android:layout_weight="1">

    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:measureWithLargestChild="true"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:weightSum="4"
        >

        <Button
            android:id="@+id/first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first"
            android:background="@drawable/rounded_button"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            >

        </Button>

        <Button
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:background="@drawable/rounded_button"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            >

        </Button>
        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:background="@drawable/rounded_button"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            >

        </Button>
        <Button
            android:id="@+id/last_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last"
            android:background="@drawable/rounded_button"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            >

        </Button>
    </LinearLayout>
</LinearLayout>